# scaffold-M2P6-logistore

./: .gitignore  Makefile  benchmark.md  docker-compose.yml  pyproject.toml  requirements.txt  veille.md
.github/workflows/: ci.yml
airflow/dags/: dag1_ingest_catalogue.py  dag2_ingest_movements.py  dag3_inventory_analytics.py  dag4_replay_rejected.py
contracts/: catalogue_contract.py  catalogue_schema.py  movement_contract.py
data/rejected/: 20260412_154940.json  20260412_160941.json  20260412_161506.json
data/reports/: inventory_report_20260412_155158.csv  inventory_report_20260412_160951.csv  inventory_report_20260412_161511.csv
notebooks/: catalogue_ingestion_walkthrough.ipynb
scripts/: __init__.py  benchmark_queries.py  db_schema_manager.py  load_to_postgres.py
tests/: pull_request_attempt.md  test_contracts.py  test_ingest_catalogue_dag.py  test_rejection_pipeline.py  test_replay.py
tests/data/: catalogue_test_v2.csv
